--- a/ecommerce.css
+++ b/ecommerce.css
@@ -9,3 +9,12 @@
     gap: 40px;
     
 }
+
+.media{
+   display: flex;
+   height: 100vh;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+  
+}
