--- a/card.css
+++ b/card.css
@@ -51,10 +51,16 @@
     background-color: rgb(239, 132, 9);
     margin-left: 10px;
     
+    
 }
 
 .card button:hover{
     background-color:gray ;
+}
+
+.card:hover{
+    transform: translateY(-10px);
+    transition: 0.3s;
 }
 
 
